# tailwind-yew-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: Readme.md
samples/: index.html  tailwind_info.md  yew.js
src/: main.rs
src/assets/: mod.rs
src/cli/: mod.rs
src/utils/: commands.rs  files.rs  mod.rs
src/yew/: mod.rs
